--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ua-parser-js": "0.7.18",
     "uuid": "3.2.1",
     "web-push": "3.3.1",
+    "xregexp": "4.1.1",
     "yarn": "1.7.0"
   },
   "devDependencies": {
